Fixed overlapping bug

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,10 +51,12 @@ body{
 
 #instagram-svg{
   filter: invert(100%);
+  z-index: -1;
 }
 
 #linkedin-svg{
   filter: invert(100%);
+  z-index: -1;
 }
 
 #intro-text > h1{
